# dumb

./: .gitignore  CHANGELOG.md  CMakeLists.txt  COMPILING.md  DUMBFILE_SYSTEM.md  README.md  pkg-config.pc.in
dumb/cmake/: CMakeLists.txt  readme.txt
dumb/examples/: dumbout.c  dumbplay.c
dumb/include/: dumb.h
dumb/include/internal/: dumb.h  it.h
dumb/prj/dumb/: dumb.pro
dumb/src/allegro/: datmod.c  datmodq.c
dumb/src/core/: duhtag.c  dumbfile.c  makeduh.c  register.c  rendsig.c
dumb/src/helpers/: clickrem.c  fir_resampler.c  lanczos_resampler.c  lpc.c  resamp2.inc  resamp3.inc  resample.c  resample.inc  resampler.c  sinc_resampler.c  stdfile.c  tarray.c
dumb/src/it/: itmisc.c  itread.c  itrender.c  itunload.c  load669.c  loadany.c  loadany2.c  loadasy.c  loadmod.c  loadmtm.c  loadoldpsm.c  loadpsm.c  loadriff.c  loadstm.c  read669.c  readam.c  readamf.c  readany.c  readany2.c  readasy.c  readdsmf.c  readmod.c  readmtm.c  readokt.c  readoldpsm.c  readpsm.c  readptm.c  readriff.c  reads3m.c  readstm.c  readxm.c  xmeffect.c
dumb/vc6/dumb/: dumb.vcproj  dumb.vcproj.vspscc  dumb.vcxproj  dumb.vcxproj.filters  mssccprj.scc
examples/: dumbout.c  dumbplay.c
include/: aldumb.h  dumb.h
include/internal/: dumb.h  fir_resampler.h  it.h  lpc.h  resampler.h  tarray.h
src/allegro/: alplay.c  datmod.c  datmodq.c  packfile.c
src/core/: duhlen.c  duhtag.c  dumbfile.c  makeduh.c  readduh.c  rendduh.c  rendsig.c
src/helpers/: clickrem.c  fir_resampler.c  lpc.c  memfile.c  resamp2.inc  resamp3.inc  resample.c  resample.inc  resampler.c  riff.c  sampbuf.c  stdfile.c
src/it/: itorder.c  itread.c  itrender.c  load669.c  load6692.c  loadamf.c  loadamf2.c  loadany.c  loadany2.c  loadasy.c  loadasy2.c  loadmtm.c  loadmtm2.c  loadokt.c  loadokt2.c  loadoldpsm.c  loadoldpsm2.c  loadpsm.c  loadpsm2.c  loadptm.c  loadptm2.c  loadriff.c  loadriff2.c  loadstm.c  loadstm2.c  ptmeffect.c  read669.c  read6692.c  readam.c  readamf.c  readany.c  readany2.c  readasy.c  readdsmf.c  readmod.c  readmtm.c  readokt.c  readokt2.c  readoldpsm.c  readpsm.c  (+7 more)
vc6/dumb/: dumb.vcxproj
